--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.58",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.0.*",
