--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "build": "encore production --progress"
   },
   "dependencies": {
-    "sass": "^1.77.2"
+    "bootstrap": "^5.3.3",
+    "sass": "^1.77.2",
+    "sass-loader": "^14.2.1"
   }
 }
