feat(productimage): add productImage type

--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,10 +5,15 @@ knp_gaufrette:
     marque_adapter:
       local:
         directory: "%kernel.project_dir%/public/images/marques"
+    products_adapter:
+      local:
+        directory: "%kernel.project_dir%/public/images/products"
 
   filesystems:
     marque_fs:
       adapter: marque_adapter
+    products_fs:
+      adapter: products_adapter
 
 vich_uploader:
   db_driver: orm
@@ -21,6 +26,15 @@ vich_uploader:
     marques:
       uri_prefix: /images/marques
       upload_destination: marque_fs
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+      inject_on_load: false
+      delete_on_update: true
+      delete_on_remove: true
+
+    products:
+      uri_prefix: /images/products
+      upload_destination: products_fs
       namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
       inject_on_load: false
